[package]
name = "voyage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }



dotenv = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres"] }
